--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 
 body{
   min-height: 100vh;
-  background-image: url(./bball_court.jpg);
+  background-image: url(./assets/images/bball_court.jpg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   
