--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
 
 body{
+  margin: 0;
   min-height: 100vh;
   background-image: url(./assets/images/bball_court.jpg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   
+}
 
+.cards-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
