--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,7 +2,7 @@
 body{
   margin: 0;
   min-height: 100vh;
-  background-image: url(./assets/images/bball_court.jpg);
+  background-image: url(../assets/images/bball_court.jpg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   
