--- a/src/components/PlayerCard.css
+++ b/src/components/PlayerCard.css
@@ -2,10 +2,16 @@
     position: relative;
 }
 
-.player-image {
+.player-image-container {
     position: absolute;
     height: 245px;
     width: 330px;
     top: 65px;
     left: 37px;
+}
+
+.player-image {
+    position: absolute;
+    height: 245px;
+    width: 330px;
 }
