got all stats where should be

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -13,7 +13,7 @@ body{
   display: flex;
   align-items: center;
   height: 100vh;
-  justify-content: space-evenly;
+  justify-content: space-around;
   overflow: auto;
   
 }
