--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,6 +8,22 @@ body{
   
 }
 
+.loading-container{
+  margin: 0;
+   position: absolute;
+   top: 50%;
+   left: 51%;
+   -ms-transform: translate(-50%, -50%);
+   transform: translate(-50%, -50%);
+}
+
+.loading-text {
+  text-align: center;
+  margin-top: 0;
+  font-size: 2.5rem;
+  color: black;
+}
+
 /* 100vh below so can align-items: center, hopefully it doesn't mess anything up later  */
 .cards-container { 
   display: flex;
@@ -46,9 +62,61 @@ body{
     box-shadow: 0px 0px 15px 9.9px white }
 }
 
-.test {
-  color: white;
+
+
+.name-container {
+  position: absolute;
+  width: 295px;
+  height: 22px;
+  top: 32px;
+  left: 30px;
+  padding-left: 5px;
 }
 
+span {
+    float: right;
+    padding-right: 15px;
+}
+
+.player-image-container {
+  position: absolute;
+  height: 213px;
+  width: 290.6px;
+  top: 59px;
+  left: 29px;
+}
+
+.player-image {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.stats {
+    position: absolute;
+    width: 290.6px;
+    height: 137px;
+    top: 307px;
+    left: 40px;
+}
+
+.stats-paragraph {
+  margin: 13px 15px;
+  margin-left: 25px;
+  width: 40%;
+}
+
+.stats-right-container {
+    float: right;
+    position: absolute;
+    top: 0;
+    right: 15%;
+    width: 50%;
+}
+
+.stats-paragraph.right {
+  width: 100%;
+  padding-left: 25px;
+}
 
 
