--- a/src/components/PlayerCard.css
+++ b/src/components/PlayerCard.css
@@ -20,21 +20,24 @@ body{
 	
   display: none;
   position: fixed;
-  max-width: 200px;
-  min-width: 250px !important;
+  max-width: 400px;
+  min-width: 400px !important;
   min-height: 20%;
-  height: 200px;
-  left: 54%;
-  top: 40%;
+  height: 250px;
+  left: 48.5%;
+  top: 30%;
   padding: 10px;
   box-sizing: border-box;
   margin-left: -12.5%;
   margin-top: -5.2%;
-  background-image: url(../assets/images/arena-monitor.jpg);
+  background-image: url(../assets/images/arena-monitor.png);
+  background-position: center;
+  background-size: cover;
+  /* background-repeat: none; */
   color: white;
   text-align: center;
   font-size: 1.5rem;
-  border: 4px solid white;
+  /* border: 4px solid white; */
 }
   
   /* @media all and (max-width: 1300px){
