--- a/src/components/PlayerCard.css
+++ b/src/components/PlayerCard.css
@@ -1,3 +1,5 @@
+
+
 .mtg-card-container {
   position: relative;
   width: 351.433px;
@@ -9,23 +11,17 @@
  height: 100%;
 }
 
-/* @import url(https://fonts.googleapis.com/css?family=Noto+Sans);
-
-body{
-  background: darken(#04B486, 30%);
-  font-family: 'Noto Sans', 'Helvetica';
-} */
 
 .customAlert{
 	
   display: none;
   position: fixed;
-  max-width: 400px;
-  min-width: 400px !important;
-  min-height: 20%;
+  max-width: 450px;
+  min-width: 450px !important;
+  min-height: 40%;
   height: 250px;
-  left: 48.5%;
-  top: 30%;
+  left: 47%;
+  top: 29%;
   padding: 10px;
   box-sizing: border-box;
   margin-left: -12.5%;
@@ -33,11 +29,13 @@ body{
   background-image: url(../assets/images/arena-monitor.png);
   background-position: center;
   background-size: cover;
-  /* background-repeat: none; */
   color: white;
   text-align: center;
-  font-size: 1.5rem;
-  /* border: 4px solid white; */
+  font-size: 1.25rem;
+  font-family: Codystar;
+  font-weight: bolder;
+  /* border: 3px red solid; */
+  /* box-shadow: 10px 15px 10px -15px #111;  */
 }
   
   /* @media all and (max-width: 1300px){
