--- a/src/components/PlayerCard.css
+++ b/src/components/PlayerCard.css
@@ -13,7 +13,7 @@
 
 
 .customAlert{
-	
+	/* overflow: visible; */
   display: none;
   position: fixed;
   max-width: 450px;
@@ -31,18 +31,40 @@
   background-size: cover;
   color: white;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-family: Codystar;
   font-weight: bolder;
   /* border: 3px red solid; */
   /* box-shadow: 10px 15px 10px -15px #111;  */
 }
 
-.message {
-  margin-top: 53px;
-  max-width: 225px;
+.message-container {
   position: absolute;
-  left: 23.5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 22.5%;
+  top: 15%;
+  max-width: 240px;
+  min-width: 240px !important;
+  min-height: 155px;
+  height: 155px;
+}
+
+.message {
+  /* margin-top: 53px; */
+  /* max-width: 90%; */
+  /* position: absolute; */
+  /* left: 23.5%; */
+  animation: blinkingText 1s 3;
+}
+
+@keyframes blinkingText{
+  40%{		color:white;	}
+  /* 49%{	color: white;	} */
+  50%{	color: transparent;	}
+  /* 99%{	color: white;	} */
+	/* 100%{	color: white;	} */
 }
   
   /* @media all and (max-width: 1300px){ this stuff came with the customAlert 
@@ -68,13 +90,15 @@
     left: 17.5%;
     top: 71.5%;
     background: none;
-    color: white;
-    font-family: Codystar;
+    /* color: white;
+    /* color: tomato; */
+    font-family: Codystar; 
+    /* keeping font properties even though can't see text because it helps with sizing of button */
     font-weight: bolder;
     font-size: 1.25rem;
-    color: tomato;
     padding: .3em 6.5em;
     border: none;
+    cursor: pointer;
   }
  
       
