--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,8 @@
 
 body{
   margin: 0;
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  width: 100%;
   background-image: url(../assets/images/bball_court.jpg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
