--- a/src/components/PlayerCard.css
+++ b/src/components/PlayerCard.css
@@ -33,7 +33,7 @@
   background-repeat: no-repeat;
   color: white;
   text-align: center;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   font-family: Codystar;
   font-weight: bolder;
   z-index: 1;
@@ -91,7 +91,7 @@
     /* margin-top: 3rem; */
     position: absolute;
     left: 39%;
-    top: 71.5%;
+    top: 70%;
     background: none;
     /* color: white;
     /* color: tomato; */
@@ -102,6 +102,7 @@
     padding: .75em 2em;
     border: none;
     cursor: pointer;
+    z-index: 2;
   }
  
       
@@ -121,4 +122,23 @@
   to{
     opacity: 1;
   }
+}
+
+.score-left,
+.score-right {
+  position: absolute;
+  /* width: 88px;
+  height: 62px; */
+  top: 69.5%;
+  color: red;
+  font-size: 3.75rem;
+}
+
+.score-left {
+  left: 21%;
+}
+
+.score-right {
+  left: 68%;
+  /* top: 46%; */
 }
